--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160012125-1');
+</script> 
+	
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="stylesheets/html5reset.css">
 	<link rel="stylesheet" href="stylesheets/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Open+Sans&display=swap" rel="stylesheet">  
+	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
+<a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
 	<nav>
 		<h1 class = "jamie">JAMIE MONVILLE</h1>	
@@ -23,8 +34,7 @@
 	</nav>
 </header>
 
-<main>
-
+<main id='skip'>
 	<img class ='about_pic' src="images/jamie.jpg" alt="Picture of Jamie Monville">
 
 	<p>I have built my strengths of active listening, empathy, strategy, infrastructure development, and implementation though nearly five years of developing new services within higher education. A desire to understand how to deliver high-touch personalization at scale led me to pursuing my Masters in User Experience Research and Design at the University of Michigan.</p>
