--- a/graphic-design.html
+++ b/graphic-design.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160012125-1');
+</script> 
+	
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,6 +22,7 @@
 </head>
 
 <body>
+<a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
 	<nav>
 		<h1 class = "jamie">JAMIE MONVILLE</h1>	
@@ -23,19 +35,46 @@
 	</nav>
 </header>
 
-<main>
+<main id='skip'>
 	<h2>Graphic Design Gallery</h2>
 	<h3>The following items were created in graphic design classes circa 2015 & 2020</h3>
 	<div class=gallery>
-		<img src="images/graphic-design/animals.png" alt="Gestalt Animals, Design Exercise 2020">
-		<img src="images/graphic-design/weather_app.png" alt="Weather App Concept Design Exercise, 2020">
-		<img src="images/graphic-design/grapefruit.png" alt="Website Color Palette Mockup, Design Exercise 2020">
-		<img src="images/graphic-design/insects.png" alt="Web Banner MockUp, Design Exercise 2020">
-		<img src="images/graphic-design/participant_profile.png" alt="Byzanite Studies Conference Particiapnt Profile, Design Exercise 2020">
-		<img src="images/graphic-design/postcard.png" alt="Rita Mae Brown Exhibit Postcard, Design Exercise 2020">
-		<img src="images/graphic-design/toronto.jpg" alt="Day in Toronto Layout, Design Exercise 2020">
-		<img src="images/graphic-design/jump.png" alt="Jump Typography, Design Exercise 2015">
-		<img src="images/graphic-design/specs.png" alt="Gestalt Robot, Design Exercise 2015">
+		<img src="images/graphic-design/animals.png" alt="Gestalt Animals">
+		<div class="caption">
+			<p>Gestalt Animals, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/weather_app.png" alt="Weather App Concept">
+		<div class="caption">
+			<p>Weather App Concept, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/grapefruit.png" alt="Website Color Palette Mockup">
+		<div class="caption">
+			<p>Website Color Palette Mockup, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/insects.png" alt="Website Banner MockUp">
+		<div class="caption">
+			<p>Website Banner, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/participant_profile.png" alt="Particiapnt Profile - Byzantine Studies Conference">
+		<div class="caption">
+			<p>Byzantine Studies Conference Particiapnt Profile, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/postcard.png" alt="Exhibit Postcard Mockup">
+		<div class="caption">
+			<p>Exhibit Postcard Mockup, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/toronto.jpg" alt="Toronto Pictures Layout">
+		<div class="caption">
+			<p>Day in Toronto Layout, Design Exercise 2020</p>
+		</div>
+		<img src="images/graphic-design/jump.png" alt="Typography Exercise - the word Jump">
+		<div class="caption">
+			<p>"Jump", Typography Exercise 2015</p>
+		</div>
+		<img src="images/graphic-design/specs.png" alt="Gestalt Robot">
+		<div class="caption">
+			<p>Gestalt Robot, Design Exercise 2014</p>
+		</div>
 	</div>
 </main>
 
