--- a/ux-projects.html
+++ b/ux-projects.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160012125-1');
+</script> 
+	
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,6 +21,7 @@
 </head>
 
 <body>
+<a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
 	<nav>
 		<h1 class = "jamie">JAMIE MONVILLE</h1>	
@@ -23,7 +34,7 @@
 	</nav>
 </header>
 
-<main>
+<main id='skip'>
 	<h2>UX Research Consulting for Atomic Object</h2>
 
 	<img class = "atomic" src="images/ux/affinity_wall_small.jpg" alt="Atomic Object Affinity Wall">
