--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   gtag('config', 'UA-160012125-1');
 </script> 
-	
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -23,8 +24,8 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
+	<h1 class = "jamie">JAMIE MONVILLE</h1>	
 	<nav>
-		<h1 class = "jamie">JAMIE MONVILLE</h1>	
 		<ul class = "topnav"> 
 			<li class = "nav_item current"><a href= "index.html">About<a/></li>
 			<li class = "nav_item"><a href= "service-design.html">Service Design<a/></li>
@@ -34,16 +35,21 @@
 	</nav>
 </header>
 
-<main id='skip'>
-	<img class ='about_pic' src="images/jamie.jpg" alt="Picture of Jamie Monville">
+<main class = "container" id='skip'>
+	<div class= 'about_pic'>
+		<img class ='about_mobile' src="images/jamie_mobile.jpg" alt="Picture of Jamie Monville">
+		<img class = 'about_full' src="images/jamie.jpg" alt="Picture of Jamie Monville">
+	</div>
+	
+	<div class= "bio">
+		<p>I have built my strengths of active listening, empathy, strategy, infrastructure development, and implementation though nearly five years of developing new services within higher education. A desire to understand how to deliver high-touch personalization at scale led me to pursuing my Masters in User Experience Research and Design at the University of Michigan.</p>
 
-	<p>I have built my strengths of active listening, empathy, strategy, infrastructure development, and implementation though nearly five years of developing new services within higher education. A desire to understand how to deliver high-touch personalization at scale led me to pursuing my Masters in User Experience Research and Design at the University of Michigan.</p>
+		<p>I have a broad understanding of UX through my work in program, event, and curriculum design, employee development, and organizational culture development and change management. I’m particularly interested in working to help organizations more effectively visualize their data to inform decisions that affect their bottom line and contribute to a positive organizational culture.</p>
 
-	<p>I have a broad understanding of UX through my work in program, event, and curriculum design, employee development, and organizational culture development and change management. I’m particularly interested in working to help organizations more effectively visualize their data to inform decisions that affect their bottom line and contribute to a positive organizational culture.</p>
+		<p>In my spare time you’ll find me cooking new recipes, working out, reading, listening to podcasts, and hanging out with friends and family. I’m low-key addicted to english breakfast tea, and my favorite way to communicate ideas is to map things out on a writable wall or whiteboard.</p>
 
-	<p>In my spare time you’ll find me cooking new recipes, working out, reading, listening to podcasts, and hanging out with friends and family. I’m low-key addicted to english breakfast tea, and my favorite way to communicate ideas is to map things out on a writable wall or whiteboard.</p>
-
-	<p>I am currently seeking internship opportunities for Summer 2021.</p>
+		<p>I am currently seeking internship opportunities for Summer 2021.</p>
+	</div>
 </main>
 
 <footer>
