--- a/ux-projects.html
+++ b/ux-projects.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'UA-160012125-1');
 </script> 
-	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -23,8 +23,8 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
+	<h1 class = "jamie">JAMIE MONVILLE</h1>	
 	<nav>
-		<h1 class = "jamie">JAMIE MONVILLE</h1>	
 		<ul class = "topnav"> 
 			<li class = "nav_item"><a href= "index.html">About<a/></li>
 			<li class = "nav_item"><a href= "service-design.html">Service Design<a/></li>
