--- a/graphic-design.html
+++ b/graphic-design.html
@@ -39,9 +39,9 @@
 	<h2>Graphic Design Gallery</h2>
 	<h3>The following items were created in graphic design classes circa 2015 & 2020</h3>
 	<div class=gallery>
-		<img src="images/graphic-design/animals.png" alt="Gestalt Animals">
+		<img src="images/graphic-design/animals.png" alt="Gestalt Animals" class='image'>
 		<div class="caption">
-			<p>Gestalt Animals, Design Exercise 2020</p>
+			<p class ="text">Gestalt Animals, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/weather_app.png" alt="Weather App Concept">
 		<div class="caption">
@@ -79,6 +79,6 @@
 </main>
 
 <footer>
-	&copy; Jamie Monville 2020  
+	&copy; Jamie Monville 2020 | monville@umich.edu  
 </footer>
 </body>
