--- a/graphic-design.html
+++ b/graphic-design.html
@@ -39,20 +39,24 @@
 	<h2>Graphic Design Gallery</h2>
 	<h3>The following items were created in graphic design classes circa 2015 & 2020</h3>
 	<div class=gallery>
-		<img src="images/graphic-design/animals.png" alt="Gestalt Animals" class='image'>
-		<div class="caption">
-			<p class ="text">Gestalt Animals, Design Exercise 2020</p>
+		<div class="container">
+			<img src="images/graphic-design/animals.png" alt="Gestalt Animals" class="image">
+			<div class="caption">
+				<p class ="text">Gestalt Animals, Design Exercise 2020</p>
+			</div>
 		</div>
-		<img src="images/graphic-design/weather_app.png" alt="Weather App Concept">
-		<div class="caption">
-			<p>Weather App Concept, Design Exercise 2020</p>
-		</div>
+		<div class="container">
+			<img src="images/graphic-design/weather_app.png" alt="Weather App Concept" class="image">
+			<div class="caption">
+				<p>Weather App Concept, Design Exercise 2020</p>
+			</div>
+		</div>		
 		<img src="images/graphic-design/grapefruit.png" alt="Website Color Palette Mockup">
-		<div class="caption">
+		<div>
 			<p>Website Color Palette Mockup, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/insects.png" alt="Website Banner MockUp">
-		<div class="caption">
+		<div>
 			<p>Website Banner, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/participant_profile.png" alt="Particiapnt Profile - Byzantine Studies Conference">
@@ -60,19 +64,19 @@
 			<p>Byzantine Studies Conference Particiapnt Profile, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/postcard.png" alt="Exhibit Postcard Mockup">
-		<div class="caption">
+		<div>
 			<p>Exhibit Postcard Mockup, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/toronto.jpg" alt="Toronto Pictures Layout">
-		<div class="caption">
+		<div class=>
 			<p>Day in Toronto Layout, Design Exercise 2020</p>
 		</div>
 		<img src="images/graphic-design/jump.png" alt="Typography Exercise - the word Jump">
-		<div class="caption">
+		<div class=>
 			<p>"Jump", Typography Exercise 2015</p>
 		</div>
 		<img src="images/graphic-design/specs.png" alt="Gestalt Robot">
-		<div class="caption">
+		<div class=>
 			<p>Gestalt Robot, Design Exercise 2014</p>
 		</div>
 	</div>
