--- a/graphic-design.html
+++ b/graphic-design.html
@@ -2,17 +2,6 @@
 <html lang="en">
 
 <head>
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-160012125-1');
-</script> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,46 +28,60 @@
 	<h2>Graphic Design Gallery</h2>
 	<h3>The following items were created in graphic design classes circa 2015 & 2020</h3>
 	<div class=gallery>
-		<div class="container">
+		<div class="box" tabindex="0">
 			<img src="images/graphic-design/animals.png" alt="Gestalt Animals" class="image">
 			<div class="caption">
-				<p class ="text">Gestalt Animals, Design Exercise 2020</p>
+				<p class ="text">Gestalt Animals | Design Exercise 2020</p>
 			</div>
 		</div>
-		<div class="container">
+		<div class="box" tabindex="0">
 			<img src="images/graphic-design/weather_app.png" alt="Weather App Concept" class="image">
 			<div class="caption">
-				<p>Weather App Concept, Design Exercise 2020</p>
+				<p class ="text">Weather App Concept | Design Exercise 2020</p>
 			</div>
-		</div>		
-		<img src="images/graphic-design/grapefruit.png" alt="Website Color Palette Mockup">
-		<div>
-			<p>Website Color Palette Mockup, Design Exercise 2020</p>
 		</div>
-		<img src="images/graphic-design/insects.png" alt="Website Banner MockUp">
-		<div>
-			<p>Website Banner, Design Exercise 2020</p>
+		<div class="box" tabindex="0">	
+			<img src="images/graphic-design/grapefruit.png" alt="Website Color Palette Mockup" class="image">
+			<div class="caption">
+				<p class ="text">Website Color Palette Mockup | Design Exercise 2020</p>
+			</div>	
 		</div>
-		<img src="images/graphic-design/participant_profile.png" alt="Particiapnt Profile - Byzantine Studies Conference">
-		<div class="caption">
-			<p>Byzantine Studies Conference Particiapnt Profile, Design Exercise 2020</p>
+		<div class="box" tabindex="0">	
+			<img src="images/graphic-design/insects.png" alt="Website Banner MockUp" class="image">
+			<div class="caption">
+				<p class ="text">Website Banner | Design Exercise 2020</p>
+			</div>
 		</div>
-		<img src="images/graphic-design/postcard.png" alt="Exhibit Postcard Mockup">
-		<div>
-			<p>Exhibit Postcard Mockup, Design Exercise 2020</p>
+		<div class="box" tabindex="0">
+			<img src="images/graphic-design/participant_profile.png" alt="Particiapnt Profile - Byzantine Studies Conference" class="image">
+			<div class="caption">
+				<p class ="text">Conference Participant Profile | Design Exercise 2020</p>
+			</div>
 		</div>
-		<img src="images/graphic-design/toronto.jpg" alt="Toronto Pictures Layout">
-		<div class=>
-			<p>Day in Toronto Layout, Design Exercise 2020</p>
+		<div class="box" tabindex="0">
+			<img src="images/graphic-design/postcard.png" alt="Exhibit Postcard Mockup" class="image">
+			<div class="caption">
+				<p class ="text">Exhibit Postcard Mockup | Design Exercise 2020</p>
+			</div>
 		</div>
-		<img src="images/graphic-design/jump.png" alt="Typography Exercise - the word Jump">
-		<div class=>
-			<p>"Jump", Typography Exercise 2015</p>
+		<div class="box" tabindex="0">
+			<img src="images/graphic-design/toronto.jpg" alt="Toronto Pictures Layout" class="image">
+			<div class="caption">
+				<p class ="text">Day in Toronto Layout | Design Exercise 2020</p>
+			</div>	
 		</div>
-		<img src="images/graphic-design/specs.png" alt="Gestalt Robot">
-		<div class=>
-			<p>Gestalt Robot, Design Exercise 2014</p>
+		<div class="box" tabindex="0">
+			<img src="images/graphic-design/jump.png" alt="Typography Exercise - the word Jump" class="image">
+			<div class="caption">
+				<p class ="text">"Jump" | Typography Exercise 2015</p>
+			</div>			
 		</div>
+		<div class="box" tabindex="0">
+			<img src="images/graphic-design/specs.png" alt="Gestalt Robot" class="image">
+			<div class= "caption">
+				<p class ="text">Gestalt Robot | Design Exercise 2015</p>
+			</div>
+		</div>	
 	</div>
 </main>
 
