--- a/service-design.html
+++ b/service-design.html
@@ -2,16 +2,6 @@
 <html lang="en">
 
 <head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-160012125-1');
-</script> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -35,61 +25,30 @@
 </header>
 
 <main id='skip'>
+	<p>Since 2016 I have designed and built infrastructure within higher education to support students, faculty, and staff within technology, education, and career services contexts. Below are a snapshot of specific projects I’ve engaged in and my process throughout each of them.</p>
+
 	<h2>Digital Wolverines Online Summer Reads Project</h2>
 	<h3>February - September 2017</h3>
 
-	<img class ='dw' src="images/service-design/digital-wolverines.png" alt="Digital Wolverines Student Promotional Material">
+	<img class ='dw' src="images/service-design/digital-wolverines-short.png" alt="Digital Wolverines Student Promotional Material">
 
-	<h4>Stakeholder Engagement</h4>
+	<h4>Context</h4>
 
-	<p>In the lead up to summer 2017 the LSA Associate Dean for Undergraduate Education called together multiple stakeholders from the college to discuss the possibility of engaging students over the summer on topics of digital citizenship. The stakeholders represented the following offices on campus:</p>
-	
-	<ul class ="copy">
-		<li>U-M Privacy Officer & Interim Chief Security Officer</li>
-		<li>Associate Vice Provost for Academic Innovation & staff</li>
-		<li>Director of the LSA Honors Program & staff</li>
-		<li>Language Resource Center staff</li>
-		<li>Student Life representative</li>
-		<li>Summer Bridge Program Manager</li>
-		<li>And me, as the BlueCorps Advisor within LSA Instructional Support Services (Tech support for students, faculty & staff)</li>
-	</ul>
+	<p>In February 2017 the LSA Associate Dean for Undergraduate Education gathered me, and multiple other campus stakeholders together to develop an optional digital summer reads curriculum focused on digital citizenship.</p>
 
-	<p>It was decided to create optional online modules within the learning management system (LMS) they would use when they started school in the fall - Canvas.</p>
-
-	<h4>Content Development and UX Considerations</h4>
-
-	<p>I worked on the User Experience team to develop content and the experience for the online modules within Canvas. After the content was drafted, I ran it by several students to ensure that it was accessible, not too boring etc. In the end we landed on five modules:</p>
-
-	<ul class ="copy">
-		<li>Introductions</li>
-		<li>Digital Wellness</li>
-		<li>Free Speech, Hate Speech, Provocation</li>
-		<li>Is Digital Access a Human Right?</li>
-		<li>Diversity in Action, Your Pledge, Your Project</li>
-	</ul>
-
-	<p>While we were tied to the Canvas LMS, there were a lot of decisions to be made about how to lay out the content, how large to make the cohorts, how to moderate the discussions etc. While making decisions we mapped out each scenario, as a group of four decided on one, and then engaged current students to test out our decisions to validate or invalidate our choices.</p>
-
-	<h4>Training</h4>
-
-	<p>I developed the training for the eight students who would serve as moderators for the summer reads project. I designed the training to include facilitator icebreakers, clear context of the project, their role in the project, what was and wasn’t their responsibility, what to know about the Canvas LMS, what to do if something goes wrong, and time to practice. Students communicated that they left with a solid sense of what to do, and who to reach out for help throughout the process.</p>
+	<p>I worked on the User Experience team to develop content and the experience for the online modules within Canvas. After the content was drafted, I ran it by several students to ensure that it was accessible, and engaging. I also developed the training for the eight students who would serve as moderators for the summer reads project.</p>
 
 	<h4>Implementation</h4>
 
-	<p>The project engaged 77 students over the course of the summer, approximately 2% of the incoming freshmen population. </p>
+	<p>The students were seperated into 5 different cohorts with between 13-18 students in each. The cohorts were spread across the summer starting on June 5th and concluding on August 11th. Each cohort had two peer facilitators engaging with students throughout the course. For earlier cohorts, content was published a week at a time, while later cohorts it was published all together.</p>
 
-	<p>The students were seperated into 5 different cohorts with between 13-18 students in each. The cohorts were spread across the summer starting on June 5th and concluding on August 11th. Each cohort had two peer facilitators engaging with students throughout the course. For earlier cohorts, content was published a week at a time, while later cohorts it was published all together. In addition to the cohort model, there were two Ask Me Anything sessions that students could participate in. One that happened on June 23rd with two of the facilitators and another that happened at the end of the experience with members of the Student Government. Both were recorded and posted to YouTube. They currently have 133 and 99 views respectively.</p>
+	<p>In addition to the cohort model, there were two Ask Me Anything sessions that students could participate in. One that happened on June 23rd with two of the facilitators and another that happened at the end of the experience with members of the Student Government. Both were recorded and posted to YouTube. They currently have 133 and 99 views respectively.</p>
 
-	<h4>Reflection</h4>
+	<h4>Impact</h4>
 
-		<p>This was my first time engaging with building an online learning experience for students and I learned a few key insights throughout the experience.</p>
-	
-	<div class ="indent">
-		<p>LEARNING 1: A warm welcome is important for continued engagement. Without a warm welcome, only particularly bold students will engage, and that engagement will drop-off. A more engaged outgoing student may further engagement</p>
+	<p>The project engaged 77 students over the course of the summer, approximately 2% of the incoming freshmen population. 40.3% of students wrote at least 1 discussion post with 12% writing six or more. The average of pages viewed was 52.</p>
 
-		<p>LEARNING 2: Lurking is Engagement - the more time someone spent on the site the more likely they seriously engaged with the information. However we would need a better analytics on page to get a more complete sense of which information was most engaging</p>
-
-		<p>LEARNING 3: Follow up surveys for the students, and or interviews after the fact would have provided deeper learnings for the next iteration. I switched roles between the conclusion of the pilot and the next iteration - but would recommend that as part of the plan for next time.</p>
+	<p>The 2017 pilot was deemed successful and greelit to continue again for summer 2018.</p>
 	</div>
 
 	<h2>Support Structure for Liberal Arts Students with Finance Aspirations</h2>
@@ -99,11 +58,9 @@
 
 	<h4>Context</h4>
 
-	<p>As the Internship Program Coordinator for Business & Technology my role centered around building pathways or business minded LSA students to see themselves in finance. I was hired into the role without any knowledge of the finance industry, but a lot of experience in getting up to speed quickly in topics I’m unfamiliar with, and to understanding and delivering on user needs.</p>
+	<p>As the Internship Program Coordinator for Business & Technology my role centered around building pathways or business minded LSA students to see themselves in finance.</p>
 
-	<h4>Needs Assessment</h4>
-
-	<p>I started my needs assessment by sourcing the internet for as much information as I could. As soon as I had a grasp around the basics: terminology, resume expectations, recruiting timeline, interview style and topics, I started meeting with students. In meeting after meeting one core pain point emerged. The liberal arts classes they were taking provided them with the broad strokes education they needed, but not the nitty gritty skills they would be tested on in interviews, resulting in:</p>
+	<p>In meeting with students one core pain point emerged. The liberal arts classes they were taking provided them with the broad strokes education they needed, but not the nitty gritty skills they would be tested on in interviews, resulting in:</p>
 
 	<ul class ="copy">
 		<li>Lack of confidence in their finance skills</li>
