--- a/service-design.html
+++ b/service-design.html
@@ -13,75 +13,84 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class = "jamie">JAMIE MONVILLE</h1>	
+	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
-			<li class = "nav_item"><a href= "index.html">About<a/></li>
-			<li class = "nav_item current"><a href= "service-design.html">Service Design<a/></li>
-			<li class = "nav_item"><a href= "ux-projects.html">UX Projects<a/></li>
-			<li class = "nav_item"><a href= "graphic-design.html">Graphic Design<a/></li>
+			<li class = "nav_item"><a href= "index.html">About</a></li>
+			<li class = "nav_item current"><a href= "service-design.html">Service Design</a></li>
+			<li class = "nav_item"><a href= "ux-projects.html">UX Projects</a></li>
+			<li class = "nav_item"><a href= "graphic-design.html">Graphic Design</a></li>
 		</ul>
 	</nav>
 </header>
 
-<main id='skip'>
-	<p>Since 2016 I have designed and built infrastructure within higher education to support students, faculty, and staff within technology, education, and career services contexts. Below are a snapshot of specific projects I’ve engaged in and my process throughout each of them.</p>
+<main class = "container_servicedesign" id='skip'>
+	<div class= "dw_head">
+		<h2>Digital Wolverines Online Summer Reads Project</h2>
+		<h3>February - September 2017</h3>
+	</div>
+	<div class = "dw_img">
+			<img class ='dw' src="images/service-design/digital-wolverines-short.png" alt="Digital Wolverines Student Promotional Material">
+	</div>
+	<div class = "dw_content">
+		<h4>Context</h4>
 
-	<h2>Digital Wolverines Online Summer Reads Project</h2>
-	<h3>February - September 2017</h3>
+		<p>In February 2017 the LSA Associate Dean for Undergraduate Education gathered me, and multiple other campus stakeholders together to develop an optional digital summer reads curriculum focused on digital citizenship.</p>
 
-	<img class ='dw' src="images/service-design/digital-wolverines-short.png" alt="Digital Wolverines Student Promotional Material">
+		<p>I worked on the User Experience team to develop content and the experience for the online modules within Canvas. After the content was drafted, I ran it by several students to ensure that it was accessible, and engaging. I also developed the training for the eight students who would serve as moderators for the summer reads project.</p>
 
-	<h4>Context</h4>
+		<h4>Implementation</h4>
 
-	<p>In February 2017 the LSA Associate Dean for Undergraduate Education gathered me, and multiple other campus stakeholders together to develop an optional digital summer reads curriculum focused on digital citizenship.</p>
+		<p>The students were seperated into 5 different cohorts with between 13-18 students in each. The cohorts were spread across the summer starting on June 5th and concluding on August 11th. Each cohort had two peer facilitators engaging with students throughout the course. For earlier cohorts, content was published a week at a time, while later cohorts it was published all together.</p>
 
-	<p>I worked on the User Experience team to develop content and the experience for the online modules within Canvas. After the content was drafted, I ran it by several students to ensure that it was accessible, and engaging. I also developed the training for the eight students who would serve as moderators for the summer reads project.</p>
+		<p>In addition to the cohort model, there were two Ask Me Anything sessions that students could participate in. One that happened on June 23rd with two of the facilitators and another that happened at the end of the experience with members of the Student Government. Both were recorded and posted to YouTube. They currently have 133 and 99 views respectively.</p>
 
-	<h4>Implementation</h4>
+		<h4>Impact</h4>
 
-	<p>The students were seperated into 5 different cohorts with between 13-18 students in each. The cohorts were spread across the summer starting on June 5th and concluding on August 11th. Each cohort had two peer facilitators engaging with students throughout the course. For earlier cohorts, content was published a week at a time, while later cohorts it was published all together.</p>
+		<p>The project engaged 77 students over the course of the summer, approximately 2% of the incoming freshmen population. 40.3% of students wrote at least 1 discussion post with 12% writing six or more. The average of pages viewed was 52.</p>
 
-	<p>In addition to the cohort model, there were two Ask Me Anything sessions that students could participate in. One that happened on June 23rd with two of the facilitators and another that happened at the end of the experience with members of the Student Government. Both were recorded and posted to YouTube. They currently have 133 and 99 views respectively.</p>
-
-	<h4>Impact</h4>
-
-	<p>The project engaged 77 students over the course of the summer, approximately 2% of the incoming freshmen population. 40.3% of students wrote at least 1 discussion post with 12% writing six or more. The average of pages viewed was 52.</p>
-
-	<p>The 2017 pilot was deemed successful and greelit to continue again for summer 2018.</p>
+		<p>The 2017 pilot was deemed successful and greelit to continue again for summer 2018.</p>
 	</div>
 
-	<h2>Support Structure for Liberal Arts Students with Finance Aspirations</h2>
-	<h3>October 2017 - June 2018</h3>
+	<div class= "biztech_head">
+		<h2>Support Structure for Liberal Arts Students with Finance Aspirations</h2>
+		<h3>October 2017 - June 2018</h3>
+	</div>
+	<div class = "biztech_img">
+			<img class = 'ii' src="images/service-design/industry-insiders.png" alt="Industry Insiders Event">
+	</div>
+	<div class = "biztech_content">
+		<h4>Context</h4>
 
-	<img class = 'ii' src="images/service-design/industry-insiders.png" alt="Industry Insiders Event">
+		<p>As the Internship Program Coordinator for Business & Technology my role centered around building pathways or business minded LSA students to see themselves in finance.</p>
 
-	<h4>Context</h4>
+		<p>In meeting with students one core pain point emerged. The liberal arts classes they were taking provided them with the broad strokes education they needed, but not the nitty gritty skills they would be tested on in interviews, resulting in:</p>
 
-	<p>As the Internship Program Coordinator for Business & Technology my role centered around building pathways or business minded LSA students to see themselves in finance.</p>
+		<ul class ="copy">
+			<li>Lack of confidence in their finance skills</li>
+			<li>Lack of clarity on how to talk about their experiences in a finance context</li>
+			<li>Lack of understanding about the nuances and requirements of the recruiting process</li>
+		</ul>
 
-	<p>In meeting with students one core pain point emerged. The liberal arts classes they were taking provided them with the broad strokes education they needed, but not the nitty gritty skills they would be tested on in interviews, resulting in:</p>
+		<h4>Interventions</h4>
 
-	<ul class ="copy">
-		<li>Lack of confidence in their finance skills</li>
-		<li>Lack of clarity on how to talk about their experiences in a finance context</li>
-		<li>Lack of understanding about the nuances and requirements of the recruiting process</li>
-	</ul>
+		<p>I addressed these pain-points with the following interventions</p>
 
-	<h4>Interventions</h4>
+		<ul class ="copy">
+			<li>One-on-one meetings with me where we could address issues of confidence, provide clarity on recruiting processes & timeline, review application materials, direct to resources to develop excel modeling skills.</li>
+			<li>Developed an “Industry Insiders” event that brought together 6-12 LSA alums working in finance to speak to how their liberal arts degree has been beneficial in their work. This event intended to address how to talk about their experiences in an finance context and to to develop relationships with individuals in the field as mentors/guides in the process</li>
+			<li>Created a google sheet that listed all of the recruiting events happening on campus as well as all the employer portals to sign-up all in one convenient place</li>
+			<li>Created bi-weekly email newsletters with industry tips, updates on timelines, and links to upcoming events and aforementioned spreadsheet.</li>
+		</ul>
 
-	<p>I addressed these pain-points with the following interventions</p>
+		<h4>Impact</h4>
 
-	<ul class ="copy">
-		<li>One-on-one meetings with me where we could address issues of confidence, provide clarity on recruiting processes & timeline, review application materials, direct to resources to develop excel modeling skills.</li>
-		<li>Developed an “Industry Insiders” event that brought together 6-12 LSA alums working in finance to speak to how their liberal arts degree has been beneficial in their work. This event intended to address how to talk about their experiences in an finance context and to to develop relationships with individuals in the field as mentors/guides in the process</li>
-		<li>Created a google sheet that listed all of the recruiting events happening on campus as well as all the employer portals to sign-up all in one convenient place</li>
-		<li>Created bi-weekly email newsletters with industry tips, updates on timelines, and links to upcoming events and aforementioned spreadsheet.</li>
-	</ul>
+		<p>In the eight months I was in the role, I was able to turn a few One-on-One meetings into a budding finance community 850 students strong. The google spreadsheet was an overwhelming success and the emails were cited by one student as the “most-helpful emails I receive from Michigan.”</p>
 
-	<h4>Impact</h4>
+		<p></p>
+		<p></p>
+	</div>
 
-	<p>In the eight months I was in the role, I was able to turn a few One-on-One meetings into a budding finance community 850 students strong. The google spreadsheet was an overwhelming success and the emails were cited by one student as the “most-helpful emails I receive from Michigan.”</p>
 </main>
 
 <footer>
