--- a/ux-projects.html
+++ b/ux-projects.html
@@ -14,18 +14,18 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class = "jamie">JAMIE MONVILLE</h1>	
+	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
-			<li class = "nav_item"><a href= "index.html">About<a/></li>
-			<li class = "nav_item"><a href= "service-design.html">Service Design<a/></li>
-			<li class = "nav_item current"><a href= "ux-projects.html">UX Projects<a/></li>
-			<li class = "nav_item"><a href= "graphic-design.html">Graphic Design<a/></li>
+			<li class = "nav_item"><a href= "index.html">About</a></li>
+			<li class = "nav_item"><a href= "service-design.html">Service Design</a></li>
+			<li class = "nav_item current"><a href= "ux-projects.html">UX Projects</a></li>
+			<li class = "nav_item"><a href= "graphic-design.html">Graphic Design</a></li>
 		</ul>
 	</nav>
 </header>
 
-<main class = "container_projects" id='skip'>
+<main class = "container_ux" id='skip'>
 	
 	<div class= "atomic_head">
 		<h2>UX Research Consulting for Atomic Object</h2>
@@ -43,7 +43,7 @@
 		<h2>UX Research Consulting for ProPublica</h2>
 	</div>
 	<div class = "propub_img">
-		<img class = 'propub' src="images/ux/interaction_map.png" alt="Interaction Map for ProPublica's Miseducation Project">
+		<img class = "propub" src="images/ux/interaction_map.png" alt="Interaction Map for ProPublica's Miseducation Project">
 	</div>
 	<div class = "propub_content">
 		<p>As part of the UMSI Curriculum we partnered with ProPublica to optimize the design on their Miseducation product. Miseducation is an interactive database that lets people see the level of segregation in every school district in the country as well as the differences in opportunities and discipline for students in every school district in the country.</p>
@@ -55,7 +55,7 @@
 		<h2>Interaction Design - Priority Org Desktop Application</h2>
 	</div>
 	<div class = "priorityorg_img">
-		<img class ='priorityorg' src="images/ux/me.png" alt="Priority Org Screenshot of Me section">
+		<img class ="priorityorg" src="images/ux/me.png" alt="Priority Org Screenshot of Me section">
 	</div>
 	<div class = "priorityorg_content">
 		<p>For my semester-long interaction design project, I chose to focus on solving an culture and operational problem I was seeing in the unit I worked in full-time. The problem was that while the organization was designated as a diversity, equity, and inclusion (DEI) initiative on campus at its inception three years prior, there were differing understandings across the organization of what it means to be a DEI initiative - and a lack of tangible mechanisms to track efforts towards creating programming that is more diverse, equitable, and inclusive.</p>
@@ -63,7 +63,10 @@
 		<p>Throughout the semester, I created a competitive analysis, sketches, personas, story maps, to ideate multiple solutions. I turned the most productive ideas into a paper prototype and conducted usability tests to finalize the details for a digital prototype in Adobe XD.</p>
 
 		<p><a href= "https://xd.adobe.com/view/3d005399-2a2d-4ab7-7327-34e10ec2575a-4b31/">Engage with the final prototype.</a></p>
-	<div>
+
+		<p></p>
+		<p></p>
+	</div>
 </main>
 
 <footer>
