--- a/graphic-design.html
+++ b/graphic-design.html
@@ -13,13 +13,13 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class = "jamie">JAMIE MONVILLE</h1>	
+	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
-			<li class = "nav_item"><a href= "index.html">About<a/></li>
-			<li class = "nav_item"><a href= "service-design.html">Service Design<a/></li>
-			<li class = "nav_item"><a href= "ux-projects.html">UX Projects<a/></li>
-			<li class = "nav_item current"><a href= "graphic-design.html">Graphic Design<a/></li>
+			<li class = "nav_item"><a href= "index.html">About</a></li>
+			<li class = "nav_item"><a href= "service-design.html">Service Design</a></li>
+			<li class = "nav_item"><a href= "ux-projects.html">UX Projects</a></li>
+			<li class = "nav_item current"><a href= "graphic-design.html">Graphic Design</a></li>
 		</ul>
 	</nav>
 </header>
