--- a/service-design.html
+++ b/service-design.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160012125-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160012125-1');
+</script>
 	<meta charset="UTF-8">
 	<title>About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -49,7 +58,7 @@
 
 		<p>The project engaged 77 students over the course of the summer, approximately 2% of the incoming freshmen population. 40.3% of students wrote at least 1 discussion post with 12% writing six or more. The average of pages viewed was 52.</p>
 
-		<p>The 2017 pilot was deemed successful and greelit to continue again for summer 2018.</p>
+		<p>The 2017 pilot was deemed successful and greenlit to continue again for summer 2018.</p>
 	</div>
 
 	<div class= "biztech_head">
