--- a/service-design.html
+++ b/service-design.html
@@ -22,7 +22,7 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
+	<h1 class ="retroshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
 			<li class = "nav_item"><a href= "index.html">About</a></li>
@@ -95,9 +95,6 @@
 		<h4>Impact</h4>
 
 		<p>In the eight months I was in the role, I was able to turn a few One-on-One meetings into a budding finance community 850 students strong. The google spreadsheet was an overwhelming success and the emails were cited by one student as the “most-helpful emails I receive from Michigan.”</p>
-
-		<p></p>
-		<p></p>
 	</div>
 
 </main>
