--- a/graphic-design.html
+++ b/graphic-design.html
@@ -22,7 +22,7 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
+	<h1 class ="retroshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
 			<li class = "nav_item"><a href= "index.html">About</a></li>
