--- a/ux-projects.html
+++ b/ux-projects.html
@@ -22,7 +22,7 @@
 <body>
 <a class = "skip" href="#skip">Skip to Main Content</a>
 <header>
-	<h1 class ="deepshadow">JAMIE MONVILLE</h1>	
+	<h1 class ="retroshadow">JAMIE MONVILLE</h1>	
 	<nav>
 		<ul class = "topnav"> 
 			<li class = "nav_item"><a href= "index.html">About</a></li>
@@ -71,9 +71,6 @@
 		<p>Throughout the semester, I created a competitive analysis, sketches, personas, story maps, to ideate multiple solutions. I turned the most productive ideas into a paper prototype and conducted usability tests to finalize the details for a digital prototype in Adobe XD.</p>
 
 		<p><a href= "https://xd.adobe.com/view/3d005399-2a2d-4ab7-7327-34e10ec2575a-4b31/">Engage with the final prototype.</a></p>
-
-		<p></p>
-		<p></p>
 	</div>
 </main>
 
