--- a/service-design.html
+++ b/service-design.html
@@ -39,9 +39,18 @@
 		<h3>February - September 2017</h3>
 	</div>
 	<div class = "dw_img">
-			<img class ='dw' src="images/service-design/digital-wolverines-short.png" alt="Digital Wolverines Student Promotional Material">
+		<div class="flip-card" tabindex="0">
+  			<div class="flip-card-inner">
+   				 <div class="flip-card-front">
+      				<img class ='dw' src="images/service-design/digital-wolverines-short.png" alt="Digital Wolverines Student Promotional Material">
+    			</div>
+	    		<div class="flip-card-back">
+	      			<p>Digital Wolverines Student Promotional Material</p>
+			    </div>
+		 	</div>
+		</div>
 	</div>
-	<div class = "dw_content">
+	<div class = "dw_content" tabindex="0">
 		<h4>Context</h4>
 
 		<p>In February 2017 the LSA Associate Dean for Undergraduate Education gathered me, and multiple other campus stakeholders together to develop an optional digital summer reads curriculum focused on digital citizenship.</p>
@@ -61,14 +70,14 @@
 		<p>The 2017 pilot was deemed successful and greenlit to continue again for summer 2018.</p>
 	</div>
 
-	<div class= "biztech_head">
+	<div class= "biztech_head" >
 		<h2>Support Structure for Liberal Arts Students with Finance Aspirations</h2>
 		<h3>October 2017 - June 2018</h3>
 	</div>
-	<div class = "biztech_img">
+	<div class = "biztech_img" tabindex="0">
 			<img class = 'ii' src="images/service-design/industry-insiders.png" alt="Industry Insiders Event">
 	</div>
-	<div class = "biztech_content">
+	<div class = "biztech_content" tabindex="0">
 		<h4>Context</h4>
 
 		<p>As the Internship Program Coordinator for Business & Technology my role centered around building pathways or business minded LSA students to see themselves in finance.</p>
