--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
 <main class = "container_about" id='skip'>
 	<div class= 'about_pic'>
-<!-- 		<img class ='about_mobile' src="images/jamie_mobile.jpg" alt="Picture of Jamie Monville">
- -->		<img class = 'about_full' src="images/jamie.jpg" alt="Picture of Jamie Monville">
+		<img class = 'about_full' src="images/jamie.jpg" alt="Picture of Jamie Monville">
 	</div>
 	
 	<div class= "bio">
