--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
 
 		<p>I am currently seeking internship opportunities for Summer 2021.</p>
 	</div>
+	<div class = form>
+		<form action="https://formspree.io/xqklldvo" method="POST" class>
+			<fieldset>
+				<legend class ="form_title">Contact Me</legend>
+					<div  class="container_form">
+						<label for= "name">Name</label>
+						<input type="text" id="form_name" name="name" placeholder="Jane Doe">
+
+						<label for= "email">Email</label>
+						<input type= "email" id="email" name="email">
+
+						<label for= "message">Message</label>
+						<input type ="textarea" id="message" name="message"> 
+
+						<input type="submit"/>
+					</div>
+			</fieldset>
+	</div>
 </main>
 
 <footer>
