--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<title>About</title>
 	<link rel="stylesheet" href="stylesheets/html5reset.css">
 	<link rel="stylesheet" href="stylesheets/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Open+Sans&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
@@ -48,22 +48,23 @@
 		<p>I am currently seeking internship opportunities for Summer 2021.</p>
 	</div>
 	<div class = form>
-		<form action="https://formspree.io/xqklldvo" method="POST" class>
+		<form action="https://formspree.io/xqklldvo" method="POST">
 			<fieldset>
 				<legend class ="form_title">Contact Me</legend>
 					<div  class="container_form">
-						<label for= "name">Name</label>
+						<label for= "form_name">Name</label>
 						<input type="text" id="form_name" name="name" placeholder="Jane Doe">
 
 						<label for= "email">Email</label>
 						<input type= "email" id="email" name="email">
 
 						<label for= "message">Message</label>
-						<input type ="textarea" id="message" name="message"> 
+						<input type ="text" id="message" name="message"> 
 
 						<input type="submit"/>
 					</div>
 			</fieldset>
+		</form>
 	</div>
 </main>
 
