--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<label for= "message">Message</label>
 						<input type ="text" id="message" name="message"> 
 
-						<input type="submit"/>
+						<input type="submit" title="submit"/>
 					</div>
 			</fieldset>
 		</form>
